--- a/src/main/webapp/i18n/es/appUser.json
+++ b/src/main/webapp/i18n/es/appUser.json
@@ -16,7 +16,7 @@
             "detail": {
                 "title": "AppUser"
             },
-            "phoneNomber": "PhoneNomber",
+            "phoneNumber": "PhoneNumber",
             "isOnline": "IsOnline",
             "user": "User"
         }
