FIX: Gender relationship
Fixed gender relationship.
All test currently working.
Populate currently working.

--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -8,6 +8,7 @@
             "entities": {
                 "main": "Entidades",
                 "appUser": "AppUser",
+                "naturalPerson": "NaturalPerson",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
