--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -8,6 +8,7 @@
             "entities": {
                 "main": "Entities",
                 "appUser": "AppUser",
+                "naturalPerson": "NaturalPerson",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
