ADD / FIX: LegalEntity and Curriculum / issue#1
Created entities LegalEntity and Curriculum with its relationships.
Fixed a bug (issue#1 on GitHub).
All test currently working.
Populate working

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -10,6 +10,8 @@
                 "appUser": "AppUser",
                 "naturalPerson": "NaturalPerson",
                 "request": "Request",
+                "legalEntity": "LegalEntity",
+                "curriculum": "Curriculum",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
