ADD: Java Domain Model finished
Added Payment entity and its relatinship with AppUser and Request.
Populate currently working.
Test failing, it will be patched when added more entities to the populate file.

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -19,6 +19,8 @@
                 "need": "Need",
                 "neededAbility": "NeededAbility",
                 "disponibility": "Disponibility",
+                "assessment": "Assessment",
+                "payment": "Payment",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
