--- a/src/main/webapp/i18n/es/global.json
+++ b/src/main/webapp/i18n/es/global.json
@@ -19,6 +19,8 @@
                 "need": "Need",
                 "neededAbility": "NeededAbility",
                 "disponibility": "Disponibility",
+                "assessment": "Assessment",
+                "payment": "Payment",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
