--- a/src/main/webapp/i18n/es/need.json
+++ b/src/main/webapp/i18n/es/need.json
@@ -18,7 +18,7 @@
             },
             "title": "Title",
             "description": "Description",
-            "cathegory": "Cathegory",
+            "category": "category",
             "deleted": "Deleted",
             "location": "Location",
             "creationDate": "CreationDate",
