--- a/src/main/webapp/i18n/es/disponibility.json
+++ b/src/main/webapp/i18n/es/disponibility.json
@@ -1,20 +1,20 @@
 {
     "volunteercrowdApp": {
-        "disponibility" : {
+        "availability": {
             "home": {
-                "title": "Disponibilitys",
-                "createLabel": "Crear nuevo Disponibility",
-                "createOrEditLabel": "Crear o editar Disponibility",
-                "search": "Search for Disponibility"
+                "title": "Availabilitys",
+                "createLabel": "Crear nuevo Availability",
+                "createOrEditLabel": "Crear o editar Availability",
+                "search": "Search for Availability"
             },
-            "created": "Un nuevo Disponibility ha sido creado con el identificador {{ param }}",
-            "updated": "Un Disponibility ha sido actualizado con el identificador {{ param }}",
-            "deleted": "Un Disponibility ha sido eliminado con el identificador {{ param }}",
+            "created": "Un nuevo Availability ha sido creado con el identificador {{ param }}",
+            "updated": "Un Availability ha sido actualizado con el identificador {{ param }}",
+            "deleted": "Un Availability ha sido eliminado con el identificador {{ param }}",
             "delete": {
-                "question": "¿Seguro que quiere eliminar Disponibility {{ id }}?"
+                "question": "¿Seguro que quiere eliminar Availability {{ id }}?"
             },
             "detail": {
-                "title": "Disponibility"
+                "title": "Availability"
             },
             "startMoment": "StartMoment",
             "endMoment": "EndMoment",
