--- a/src/main/webapp/i18n/fr/need.json
+++ b/src/main/webapp/i18n/fr/need.json
@@ -25,7 +25,7 @@
             "modificationDate": "ModificationDate",
             "appUser": "AppUser",
             "neededAbility": "NeededAbility",
-            "disponibility": "Disponibility"
+            "availability": "Availability"
         }
     }
 }
