--- a/src/main/webapp/i18n/en/naturalPerson.json
+++ b/src/main/webapp/i18n/en/naturalPerson.json
@@ -18,7 +18,8 @@
             },
             "birthDate": "BirthDate",
             "gender": "Gender",
-            "appUser": "AppUser"
+            "appUser": "AppUser",
+            "curriculum": "Curriculum"
         }
     }
 }
