ADD: NaturalPersonForm view and Date formats
Added NaturalPersonForm to display the form in a custom view from the url /naturalPerson/register.
Changed the date formats.
Changed the JHipster version in .yo-rc.json file

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -21,6 +21,7 @@
                 "availability": "Availability",
                 "assessment": "Assessment",
                 "payment": "Payment",
+                "naturalPersonForm": "NaturalPersonForm",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
